# autonomouse_applying

./: LICENSE  main.py  mongodb.py  pretty_page.html  pyproject.toml  requirements.txt  test.py
api_server/: Dockerfile  app.py  docker-compose.yml  requirements.txt
indeed_profile/: Local State
indeed_profile/Crashpad/: metadata
indeed_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data
indeed_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_00000b  f_00000c  f_00000d  f_00000f  f_000010  f_000011  f_000012  index
indeed_profile/GraphiteDawnCache/: data_1  index
indeed_profile/ShaderCache/: data_1  index
indeed_profile/segmentation_platform/: ukm_db
kafka/: Dockerfile  consumer.py  docker-compose.yml  producer.py  run.sh
mongoDB/: docker-compose.yml
mongoDB/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-41b1664f-f402-4a67-9052-759868e80544.wt  collection-6fdf0412-6f78-4644-b02b-5610b079c546.wt  collection-c4b735b8-4709-44ee-9c08-6ec811effde0.wt  collection-f47b81df-6e96-486f-bad8-bcb2bd478d6b.wt  index-440bc7fc-af71-4532-9623-76f8c3701e73.wt  index-5496b06d-147a-419e-a312-6f15b1def3bc.wt  index-6be49530-791b-4e1f-ab23-9a0372a046dc.wt  index-73707bcd-0203-4203-b6c3-4c8ae2c10821.wt  index-a6b7d638-bf72-4a9d-9aab-f96fd9c5b504.wt  index-aac0af3b-b06a-4b0a-bc62-85532b6835fe.wt  (+2 more)
n8n/: docker-compose.yml  requirements.txt  test.py
profile/: Local State
(+2065 files in other folders)
